--- a/_layouts/writeup.html
+++ b/_layouts/writeup.html
@@ -18,6 +18,7 @@
             --text-main: #c9d1d9;     
             --border-color: #30363d;  
             --accent-color: #00ff41;  
+            --title-color: #ff0055;
             --content-width: 1100px;
         }
 
