--- a/_layouts/writeup.html
+++ b/_layouts/writeup.html
@@ -71,7 +71,7 @@
             margin-top: 3rem;
             border-bottom: 1px solid var(--border-color);
             padding-bottom: 10px;
-            color: var(--title-color) !important; /* Đổi sang màu hồng #ff0055 */
+            color: var(--accent-color) !important; /* Đổi sang màu hồng #ff0055 */
             font-family: 'Oxanium', sans-serif;
             text-shadow: 0 0 15px rgba(255, 0, 85, 0.3); /* Thêm chút effect phát sáng hồng */
         }
