--- a/_layouts/writeup.html
+++ b/_layouts/writeup.html
@@ -71,7 +71,6 @@
             margin-top: 3rem;
             border-bottom: 1px solid var(--border-color);
             padding-bottom: 10px;
-            color: var(--accent-color) !important; /* Đổi sang màu hồng #ff0055 */
             font-family: 'Oxanium', sans-serif;
             text-shadow: 0 0 15px rgba(255, 0, 85, 0.3); /* Thêm chút effect phát sáng hồng */
         }
@@ -102,7 +101,7 @@
 
         .writeup-content td:first-child {
             font-weight: 600;
-            color: var(--accent-color);
+            color:;
             width: 30%;
         }
 
@@ -151,7 +150,7 @@
 
         .copy-btn:hover {
             background: #238636; /* Màu xanh Github */
-            color: #fff;
+            color: var(--accent-color);
             border-color: #238636;
         }
 
